Restore route locations for service requests
